refactor: 하드코딩된 문자열과 숫자를 상수화하여 유지보수성 향상