@@ -1,6 +1,14 @@
 package store.io.parser;
 
+import static store.constants.NumberConstants.BUY_QUANTITY_INDEX;
+import static store.constants.NumberConstants.END_LOCAL_DATE_TIME_HOUR;
+import static store.constants.NumberConstants.END_LOCAL_DATE_TIME_INDEX;
+import static store.constants.NumberConstants.END_LOCAL_DATE_TIME_MINUTE;
+import static store.constants.NumberConstants.END_LOCAL_DATE_TIME_SECOND;
+import static store.constants.NumberConstants.GET_QUANTITY_INDEX;
+import static store.constants.NumberConstants.START_LOCAL_DATE_TIME_INDEX;
 import static store.constants.StringConstants.COMMA;
+import static store.constants.StringConstants.DATE_TIME_FORMATTER_PATTERN;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
@@ -23,10 +31,10 @@ public class PromotionsFileLineParser {
     public PromotionInfo parseLine() {
         List<String> parts = Arrays.asList(line.split(COMMA));
         Promotion promotionName = getPromotion(parts);
-        int buyQuantity = getValidQuantity(parts.get(1));
-        int getQuantity = getValidQuantity(parts.get(2));
+        int buyQuantity = getValidQuantity(parts.get(BUY_QUANTITY_INDEX));
+        int getQuantity = getValidQuantity(parts.get(GET_QUANTITY_INDEX));
 
-        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd");
+        DateTimeFormatter formatter = DateTimeFormatter.ofPattern(DATE_TIME_FORMATTER_PATTERN);
         LocalDateTime startDateTime = getStartLocalDateTime(parts, formatter);
         LocalDateTime endDateTime = getEndLocalDateTime(parts, formatter);
 
@@ -36,7 +44,7 @@ public class PromotionsFileLineParser {
     private static Promotion getPromotion(List<String> parts) {
         Promotion promotionName = Promotion.NULL;
         for (Promotion promotion : Promotion.values()) {
-            if (promotion.getPromotionName().equals(parts.get(0))) {
+            if (promotion.getPromotionName().equals(parts.getFirst())) {
                 promotionName = promotion;
             }
         }
@@ -54,13 +62,13 @@ public class PromotionsFileLineParser {
     }
 
     private static LocalDateTime getStartLocalDateTime(List<String> parts, DateTimeFormatter formatter) {
-        LocalDate startDate = LocalDate.parse(parts.get(3), formatter);
+        LocalDate startDate = LocalDate.parse(parts.get(START_LOCAL_DATE_TIME_INDEX), formatter);
         return startDate.atStartOfDay();
     }
 
     private static LocalDateTime getEndLocalDateTime(List<String> parts, DateTimeFormatter formatter) {
-        LocalDate endDate = LocalDate.parse(parts.get(4), formatter);
-        return endDate.atTime(23, 59, 59);
+        LocalDate endDate = LocalDate.parse(parts.get(END_LOCAL_DATE_TIME_INDEX), formatter);
+        return endDate.atTime(END_LOCAL_DATE_TIME_HOUR, END_LOCAL_DATE_TIME_MINUTE, END_LOCAL_DATE_TIME_SECOND);
     }
 
 
